--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best online toys in jaipur | NarulasToyshop.com</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type ='text' />
 </head>
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="puzzle.png" alt="NarulasToyShop.com">
+            <img src="puzzle.png" alt="NarulasToyShop">
         </div>
 
         <ul>
