--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Gurbani (Punjabi: ਗੁਰਬਾਣੀ) is a Sikh term,<br> very commonly used by Sikhs
             to refer to various compositions <br>by the Sikh Gurus and other writers of Guru Granth Sahib. <br>
             In general, hymns in the central text of the Sikhs,<br> the Guru Granth Sahib, are called Gurbani.</p>
-            <a href="pages/Explore.html" class="btn">Explore Now &#10146;</a>
+            <a href="Pages/Explore.html" class="btn">Explore Now &#10146;</a>
         </div>
         <div class="col-2">
             <img src="Images/Khanda.png">
