--- a/Pages/Explore.html
+++ b/Pages/Explore.html
@@ -11,7 +11,7 @@
 <div class="container">
         <div class="navbar">
         <div class="logo">
-            <img src="../images/logo.png" alt="125px" height="150" width="150">
+            <img src="../Images/logo.png" alt="125px" height="150" width="150">
         </div>
         <nav>
             <ul id="MenuItems">
